[package]
name = "Lightspeed"
version = "0.1.0"
authors = [
  "Jake Armendariz <jakearmendariz99@gmail.com>"
]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.10"
actix-broker = "0.3.1"
actix-files = "0.4"
actix-rt = "1"
actix-web = "3"
actix-web-actors = "3"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scoped_threadpool = "0.1.9"
lazy_static = "1.4.0"
rand_distr = "0.4.0"